--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,12 +5,12 @@ stages:
 build:
   stage: build
   script:
-    - cd S3_IP_Muziekzaals
+    - cd s3_gps_ivanti
     - ./gradlew build -x test
     - ./gradlew.bat --stop 
 test:
   stage: test
   script:
-    - cd S3_IP_Muziekzaals
+    - cd s3_gps_ivanti
     - ./gradlew test
     - ./gradlew.bat --stop
