--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,12 +5,12 @@ stages:
 build:
   stage: build
   script:
-     
+    - cd GroupProjectAPI     
     - ./gradlew build -x test
     - ./gradlew.bat --stop 
 test:
   stage: test
   script:
-    
+    - cd GroupProjectAPI   
     - ./gradlew test
     - ./gradlew.bat --stop
