--- a/GroupProjectApi/build.gradle
+++ b/GroupProjectApi/build.gradle
@@ -7,7 +7,6 @@ plugins {
 	id "org.sonarqube" version "3.3"
 }
 
-
 group = 'com.example'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '17'
@@ -18,14 +17,25 @@ repositories {
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter'
-    implementation 'org.projectlombok:lombok:1.18.20'
+    implementation 'org.projectlombok:lombok:1.18.24'
     implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
+	implementation 'org.junit.jupiter:junit-jupiter:5.8.2'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
+
+	runtimeOnly 'mysql:mysql-connector-java'
+	testImplementation 'org.mockito:mockito-core:4.5.1'
+	testImplementation ('org.springframework.boot:spring-boot-starter-test'){
+		exclude group: 'org.junit.vintage', module:'junit-vintage-engine'}
+	testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.8.2'
+	testImplementation 'com.h2database:h2'
+	testCompileOnly("junit:junit")
+
 }
 
 tasks.named('test') {
 	useJUnitPlatform()
+
 }
