--- a/GroupProjectApi/build.gradle
+++ b/GroupProjectApi/build.gradle
@@ -14,7 +14,7 @@ configurations {
 	}
 }
 
-group = 'com.example'
+group = 'ivantiAppMarkt'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '17'
 
@@ -46,35 +46,40 @@ dependencies {
 	implementation 'mysql:mysql-connector-java:8.0.28'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
-	implementation 'org.flywaydb:flyway-core:8.5.5'
-	implementation 'org.flywaydb:flyway-mysql:8.5.5'
-	implementation 'net.logstash.logback:logstash-logback-encoder:7.0.1'
+	implementation 'org.flywaydb:flyway-core:8.5.10'
+	implementation 'org.flywaydb:flyway-mysql:8.5.10'
+	implementation 'net.logstash.logback:logstash-logback-encoder:7.1.1'
 	implementation 'ch.qos.logback:logback-classic:1.2.11'
-	implementation 'org.springdoc:springdoc-openapi-ui:1.6.6'
+	implementation 'org.springdoc:springdoc-openapi-ui:1.6.8'
 	implementation 'org.springframework.boot:spring-boot-starter'
-	implementation 'org.projectlombok:lombok:1.18.20'
+	implementation 'org.projectlombok:lombok:1.18.24'
 	implementation 'junit:junit:4.13.1'
 
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'com.h2database:h2'
-
 }
 
-tasks.named('test') {
+test {
 	useJUnitPlatform()
-
-}
-
-jacocoTestReport {
-	reports {
-		xml.enabled true
+	testLogging {
+		events "passed", "skipped", "failed"
 	}
-}
-test.finalizedBy jacocoTestReport
+
+	tasks.named('test') {
+		useJUnitPlatform()
+	}
+
+	jacocoTestReport {
+		reports {
+			xml.enabled true
+		}
+	}
+	test.finalizedBy jacocoTestReport
 
 
-tasks.named('sonarqube').configure {
-	dependsOn test
+	tasks.named('sonarqube').configure {
+		dependsOn test
+	}
 }
