--- a/gps-react-app/package.json
+++ b/gps-react-app/package.json
@@ -19,6 +19,7 @@
     "babel-plugin-macros": "^3.1.0",
     "chart.js": "^3.7.1",
     "components": "^0.1.0",
+    "jquery": "^3.6.0",
     "react": "^17.0.2",
     "react-chartjs-2": "^4.1.0",
     "react-dom": "^17.0.2",
