--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,4 +1,3 @@
-
 stages:
 - build
 - test 
@@ -13,7 +12,7 @@ build:
 test:
   stage: test
   script:
-    - cd S3_IP_Muziekzaals
+    - cd GroupProjectApi   
     - ./gradlew test
     - ./gradlew sonarqube
     - ./gradlew.bat --stop
@@ -22,7 +21,7 @@ sonarqube:
   stage: sonarqube
   script:
     - git fetch --unshallow
-    - cd S3_IP_Muziekzaals  
+    - cd GroupProjectApi   
     - ./gradlew sonarqube
     - ./gradlew.bat --stop
 
