--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,6 +1,7 @@
 stages:
 - build
 - test 
+- sonarqube
 
 build:
   stage: build
@@ -11,6 +12,17 @@ build:
 test:
   stage: test
   script:
-    - cd GroupProjectApi 
+    - cd GroupProjectApi   
     - ./gradlew test
+    - ./gradlew sonarqube
     - ./gradlew.bat --stop
+
+sonarqube:
+  stage: sonarqube
+  script:
+    - git fetch --unshallow
+    - cd GroupProjectApi   
+    - ./gradlew sonarqube
+    - ./gradlew.bat --stop
+
+
