--- a/GroupProjectApi/src/main/resources/application.properties
+++ b/GroupProjectApi/src/main/resources/application.properties
@@ -1,1 +1,3 @@
 jwt.secret=E91E158E4C6656F68B1B5D1C311766DE98D2AD6EF3BFB44F78E9CFCDF9
+spring.data.mongodb.uri=mongodb+srv://root:root@cluster.9hwibna.mongodb.net/?retryWrites=true&w=majority
+spring.data.mongodb.database=ivantidb
