--- a/GroupProjectApi/build.gradle
+++ b/GroupProjectApi/build.gradle
@@ -6,7 +6,11 @@ plugins {
 	id 'java'
 	id "org.sonarqube" version "3.3"
 	id 'jacoco'
+	id 'application'
 }
+
+mainClassName = 'DriveQuickstart'
+targetCompatibility = 17
 
 configurations {
 	compileOnly {
@@ -45,6 +49,9 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter'
 	implementation 'org.projectlombok:lombok:1.18.24'
 	implementation 'junit:junit:4.13.1'
+	implementation 'com.google.api-client:google-api-client:1.34.1'
+	implementation 'com.google.oauth-client:google-oauth-client-jetty:1.33.2'
+	implementation 'com.google.apis:google-api-services-drive:v3-rev20220508-1.32.1'
 
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	compileOnly 'org.projectlombok:lombok'
