--- a/gps-react-app/package.json
+++ b/gps-react-app/package.json
@@ -29,6 +29,7 @@
     "scripts": "^0.1.0",
     "styled": "^1.0.0",
     "styled-components": "^5.3.5",
+    "use-state-with-callback": "^3.0.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
