Website Translation via Google Translate implemented (All Account types)

--- a/gps-react-app/package.json
+++ b/gps-react-app/package.json
@@ -30,6 +30,7 @@
     "styled": "^1.0.0",
     "styled-components": "^5.3.5",
     "use-state-with-callback": "^3.0.2",
+    "vue-gtranslate": "^2.0.20",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
