--- a/gps-react-app/package.json
+++ b/gps-react-app/package.json
@@ -20,10 +20,12 @@
     "chart.js": "^3.7.1",
     "components": "^0.1.0",
     "jquery": "^3.6.0",
+    "jwt-decode": "^3.1.2",
     "react": "^17.0.2",
     "react-chartjs-2": "^4.1.0",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
+    "react-router": "^6.3.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.1",
     "scripts": "^0.1.0",
