--- a/GroupProjectApi/build.gradle
+++ b/GroupProjectApi/build.gradle
@@ -55,10 +55,10 @@ dependencies {
 
 	//I spend 1 hour trying to fix one unit test and the problem was that I used mockito-core instead of mockito-inline. I just want to immortalize my suffering by posting it  here
 	testImplementation 'org.mockito:mockito-inline:4.5.1'
-	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.8.2'
 	testImplementation 'com.h2database:h2'
 	testImplementation 'net.bytebuddy:byte-buddy:1.12.10'
+	testImplementation 'org.springframework.security:spring-security-test'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'com.h2database:h2'
 
