--- a/GroupProjectApi/build.gradle
+++ b/GroupProjectApi/build.gradle
@@ -27,6 +27,9 @@ repositories {
 }
 
 dependencies {
+	implementation ('org.springframework.boot:spring-boot-starter-websocket')
+	implementation 'org.springframework.boot:spring-boot-starter-websocket'
+	implementation 'org.springframework.boot:spring-boot-starter-websocket'
 	implementation 'org.springframework.boot:spring-boot-starter'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
