--- a/gps-react-app/package.json
+++ b/gps-react-app/package.json
@@ -29,11 +29,14 @@
     "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.1",
     "scripts": "^0.1.0",
+    "sockjs-client": "^1.6.1",
+    "stompjs": "^2.3.3",
     "styled": "^1.0.0",
     "styled-components": "^5.3.5",
     "use-state-with-callback": "^3.0.2",
     "vue-gtranslate": "^2.0.20",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "net": "^1.0.2"
   },
   "scripts": {
     "start": "react-scripts start",
